cmake_minimum_required(VERSION 3.28)
project(MBD_Code)

set(CMAKE_CXX_STANDARD 20)

find_package(RapidJSON)

add_executable(MBD_Code main.cpp
        MDMLib.cc
        veins.h
        FWMath.h
        Coord.h
        Coord.h
        F2MDParameters.h
        InterTest.h
        InterTest.cc
        NodeTable.h
        NodeMDMHistory.cc
        LinkControl.h
        LinkControl.h
        LinkControl.h
        Link.cc
        Link.cc
        Link.cc
        Link.h
        LinkControl.cc
        LinkControl.cc
        LinkControl.cc
        Coord.cc
        MdChecksTypes.h
        MdChecksTypes.h
        RectIntLib.h
        Line.h
        Line.cc
        NodeHistory.cc
        NodeHistory.cc
        NodeTable.cc
        NodeTable.cc
        ProtocolEnforcer.cc
        Rectangle.cc
        RectIntLib.cc
        Vector.cc
        GeneralLib.cc
        EllipseIntLib.cc
        EllipseIntLib.cc
        EllipseIntLib.h
        EllipseIntLib.h
        EllipseIntLib.h
        EllipseIntLib.h
        EllipseIntLib.h
        EllipseIntLib.cc
        EllipseIntLib.cc
        EllipseIntLib.h
        EllipseIntLib.h
        EllipseIntLib.h
        EllipseIntLib.h
        SupportEllipse.cc
        BsmCheck.h
        BsmCheck.cc
        BsmCheck.cc
        BasicSafetyMessage.h
        BasicSafetyMessage.cc
        LegacyChecks.cc
        ReadJson.cc
        ReadJson.cc
        ReadJson.h
        NodeKinematicData.h
        NodeKinematicHistoryData.h
        NodeKinematicHistoryData.cc
        CatchChecks.h
        CatchChecks.cc
        SLChecks.h
        SLChecks.cc
        SLOpinion.h
        SLOpinion.h
        SLOpinion.cc
        LegacyParametersArc1.h
        json.hpp
        CatchParametersArc1.h
        TrainResultsCatch.h
        SLParametersArc1.h
        TrainResultsSL.h
)
